--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H-2</title>
+    <title>H-2-Float</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="div-top"></div>
+    </header>
+    <main>
+        <div class="center1"></div>
+        <div class="container">
+            <div class="center2"></div>
+            <div class="center2"></div>
+        </div>
+
+        <div class="center1"></div>
+        <div class="container">
+            <div class="center2"></div>
+            <div class="center2"></div>
+        </div>
+        
+        <div class="center1"></div>
+    </main>
+    <footer></footer>
 </body>
 </html>
